24-5-20 0:15 <差个历史记录>

--- a/bigdemo/manifest.json
+++ b/bigdemo/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "bigdemo",
-    "appid" : "__UNI__F9B2897",
+    "appid" : "",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
